add number on bubble

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 
     <title>Canvas Resize</title>
     <style>
+      canvas {
+        background-color: antiquewhite;
+      }
       body {
         margin: 0;
       }
